--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="credit">Developed by Mohamed Yassine Kharrat</string>
+    <string name="title_activity_main2">MainActivity2</string>
 </resources>
